--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  http: ^0.13.5
+  intl: ^0.17.0
+  provider: ^6.1.1
+  path_provider: ^2.0.0
+  carousel_slider: 4.0.0
+  equatable: 2.0.3
+  get: 4.3.8
+  flutter_secure_storage: 3.3.5
+  localstorage: ^4.0.1+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -46,7 +54,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+  flutter_launcher_icons: 0.9.2
+  mocktail: 0.1.4
+  faker: 2.0.0
+  network_image_mock: 2.0.1
+  test: ^1.25.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
