--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   faker: 2.0.0
   network_image_mock: 2.0.1
   test: ^1.25.2
+  mockito: ^5.4.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
