--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   carousel_slider: 4.0.0
   equatable: 2.0.3
   get: 4.3.8
-  flutter_secure_storage: 3.3.5
+  flutter_secure_storage: ^9.0.0
   localstorage: ^4.0.1+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,7 +58,7 @@ dev_dependencies:
   mocktail: 0.1.4
   faker: 2.0.0
   network_image_mock: 2.0.1
-  test: ^1.25.2
+  test: ^1.22.0
   mockito: ^5.4.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
